# CasTaxonomyViewer

./: CMakeLists.txt
res/: cas_taxonomy_viewer_resources.qrc
res/cas_taxonomy_viewer/: taxonomy_graph.js  taxonomy_view.html
res/js_libs/: qwebchannel.tools.js
src/: CasTaxonomyViewer.cpp  CasTaxonomyViewer.h  CasTaxonomyViewer.json  CellSetColors.h  ElidedLabel.cpp  ElidedLabel.h  TaxonomyDataWidget.cpp  TaxonomyDataWidget.h  TaxonomyWidget.cpp  TaxonomyWidget.h
